fix: alignment issue

--- a/src/app/components/channel-inner/channel-inner.component.scss
+++ b/src/app/components/channel-inner/channel-inner.component.scss
@@ -101,7 +101,7 @@
     }
 }
 .c-h3--weight{
-    font-weight: 600;
+    font-weight: 500;
 }
 
 .opt-dot{
